# supermarket-tracker

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.database  NEW_WORLD.md  README.md  docker-compose.yml
.github/workflows/: audit.yml  ci.yml  release.yml
.sqlx/: query-346e9c4fc581481844fba6fb48ae0a7d0fcd1c240c9178ebb88525203f878ff6.json  query-43f71b38b4757a5ba87f17382c3c4ed46931a76e5a5784dff5370ff92c498927.json  query-cc717d00824389698175325ababa574668afccc7996b3635a6d525a0c48da9b0.json  query-e56b2c36df7837da008092f632b3d406558231138384fb057a9ab103893db65a.json
migrations/: 20231204093755_create_database.down.sql  20231204093755_create_database.up.sql  20231224052645_create_stores_table.down.sql  20231224052645_create_stores_table.up.sql
queries/: get_countdown_product_by_id.sql  get_largest_price_diff.sql
scripts/: prepare_offline.sh
src/: config.rs  error.rs  initialize_database.rs  lib.rs  main.rs  supermarket.rs  telemetry.rs
src/countdown/: category.rs  get_categories.rs  get_off_sale_skus.rs  get_products.rs  mod.rs  product.rs  run.rs  save_prices.rs  save_products.rs  save_store.rs  set_fulfillment_method.rs  set_location.rs
src/new_world/: mod.rs  run.rs
