[package]
name = "supermarket-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["gzip", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.29"
sqlx = { version = "0.7.2", features = [
	"postgres",
	"runtime-tokio-native-tls",
] }
dotenvy = "0.15.7"
error-stack = "0.4.1"
