[package]
name = "supermarket-tracker"
version = "0.1.0"
authors = ["OverHash <46231745+OverHash@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = [
	"gzip",
	"json",
	"native-tls",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
sqlx = { version = "0.7.3", features = [
	"postgres",
	"runtime-tokio-native-tls",
] }
dotenvy = "0.15.7"
error-stack = "0.4.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
	"fmt",
	"env-filter",
] }

[lints.clippy]
cargo = "deny"
pedantic = "deny"

multiple_crate_versions = { level = "allow", priority = 1 }
